--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="logo">Car <span>Point</span> </a>
         <!-- Nav List -->
         <ul class="navbar">
-          <li><a href="#home">Home</a></li>
+          <li><a href="#home" class="active">Home</a></li>
           <li><a href="#cars">Cars</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#parts">Parts</a></li>
@@ -31,10 +31,249 @@
         <!-- Search Icon -->
         <i class="bx bx-search" id="search-icon"></i>
         <!-- Search Box -->
-        <div>
+        <div class="search-box container">
           <input type="search" name="" id="" placeholder="Search here..." />
         </div>
       </div>
     </header>
+    <!-- Home Section-->
+    <section class="home" id="home">
+      <div class="home-text">
+        <h1>
+          We Have Everything <br />
+          Your <span>Car </span>Needs
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur <br />
+          adipisicing elit. Quasi totam quaerat, veniam, <br />
+          ducimus dolores deleniti consequatur ex mollitia quas nihil ut a?
+          <br />
+          Nemo incidunt beatae, aut ab tenetur possimus nesciunt!
+        </p>
+        <!-- Home Button -->
+        <a href="#" class="btn">Discover Now</a>
+      </div>
+    </section>
+    <!-- Cars Section -->
+    <section class="cars" id="cars">
+      <div class="heading">
+        <span>All Cars</span>
+        <h2>We have all types of cars</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur <br />
+          adipisicing elit. Quasi totam quaerat, veniam, <br />
+          ducimus dolores deleniti consequatur ex mollitia quas nihil ut a?
+          <br />
+          Nemo incidunt beatae, aut ab tenetur possimus nesciunt!
+        </p>
+      </div>
+      <div class="cars-container container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img src="img/car1.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 2 -->
+        <div class="box">
+          <img src="img/car2.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 3 -->
+        <div class="box">
+          <img src="img/car3.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 4 -->
+        <div class="box">
+          <img src="img/car4.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 5 -->
+        <div class="box">
+          <img src="img/car5.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+        <!-- Box 6 -->
+        <div class="box">
+          <img src="img/car6.jpg" alt="" />
+          <h2>Porche Car</h2>
+        </div>
+      </div>
+    </section>
+    <!-- About Section-->
+    <section class="about container" id="about">
+      <div class="about-img">
+        <img src="img/about.png" alt="" />
+      </div>
+      <div class="about-text">
+        <span>About Us</span>
+        <h2>Cheap Prices With <br />Quality Cars</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur <br />
+          adipisicing elit. Quasi totam quaerat, veniam, <br />
+        </p>
+        <!-- About Button -->
+        <a href="#" class="btn">Learn More</a>
+      </div>
+    </section>
+    <!-- Parts Section -->
+    <section class="parts" id="parts">
+      <div class="heading">
+        <span>What We Offer</span>
+        <h2>Our Car Is Always Excellent</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur <br />
+          adipisicing elit. Quasi totam quaerat, veniam, <br />
+        </p>
+      </div>
+      <!-- Parts Container -->
+      <div class="parts-container container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img src="img/part1.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+        <!-- Box 2 -->
+        <div class="box">
+          <img src="img/part2.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+        <!-- Box 3 -->
+        <div class="box">
+          <img src="img/part3.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+        <!-- Box 4 -->
+        <div class="box">
+          <img src="img/part4.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+        <!-- Box 5 -->
+        <div class="box">
+          <img src="img/part5.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+        <!-- Box 6 -->
+        <div class="box">
+          <img src="img/part6.png" alt="" />
+          <h3>Auto Spare Parts</h3>
+          <span>$120.99</span>
+          <i class="bx bxs-star">(6 Reviews)</i>
+          <a href="#" class="btn">Buy Now</a>
+          <a href="#" class="details">View Details</a>
+        </div>
+      </div>
+    </section>
+    <!-- Blog Section -->
+    <section class="blog" id="blog">
+      <div class="heading">
+        <span>Blog & News</span>
+        <h2>Our Blog Content</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur <br />
+          adipisicing elit. Quasi totam quaerat, veniam, <br />
+        </p>
+      </div>
+      <!-- Blog Container -->
+      <div class="blog-container container">
+        <!-- Box 1 -->
+        <div class="box">
+          <img src="img/car1.jpg" alt="" />
+          <span>Feb 14 2021</span>
+          <h3>How To Get A Perfect Car At A Low Price</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur <br />
+            adipisicing elit. Quasi totam quaerat, veniam, <br />
+          </p>
+          <a href="#" class="blog-btn"
+            >Read More<i class="bx bx-right-arrow-alt"></i
+          ></a>
+        </div>
+        <!-- Box 2 -->
+        <div class="box">
+          <img src="img/car4.jpg" alt="" />
+          <span>Feb 14 2021</span>
+          <h3>How To Get A Perfect Car At A Low Price</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur <br />
+            adipisicing elit. Quasi totam quaerat, veniam, <br />
+          </p>
+          <a href="#" class="blog-btn"
+            >Read More<i class="bx bx-right-arrow-alt"></i
+          ></a>
+        </div>
+        <!-- Box 3 -->
+        <div class="box">
+          <img src="img/car3.jpg" alt="" />
+          <span>Feb 14 2021</span>
+          <h3>How To Get A Perfect Car At A Low Price</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur <br />
+            adipisicing elit. Quasi totam quaerat, veniam, <br />
+          </p>
+          <a href="#" class="blog-btn"
+            >Read More<i class="bx bx-right-arrow-alt"></i
+          ></a>
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <section class="footer">
+      <div class="footer-container container">
+        <div class="footer-box">
+          <a href="#" class="logo">Car <span>Point</span></a>
+          <div class="social">
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+          </div>
+        </div>
+        <div class="footer-box">
+          <h3>Page</h3>
+          <a href="#">Home</a>
+          <a href="#">Cars</a>
+          <a href="#">Parts</a>
+          <a href="#">Sales</a>
+        </div>
+        <div class="footer-box">
+          <h3>Legal</h3>
+          <a href="#">Privacy</a>
+          <a href="#">Refund Policy</a>
+          <a href="#">Cookie Policy</a>
+        </div>
+        <div class="footer-box">
+          <h3>Contact</h3>
+          <p>Kenya</p>
+          <p>United States</p>
+          <p>German</p>
+        </div>
+      </div>
+    </section>
+    <!-- Copyright -->
+    <div class="copyright">
+      <p>&#169; Teekay All Rights Reserved</p>
+    </div>
+    <!-- Link to JS -->
+    <script src="main.js"></script>
   </body>
 </html>
