--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Menu Icon -->
         <i class="bx bx-menu" id="menu-icon"></i>
         <!-- Logo -->
-        <a href="#" class="logo">Car <span>Point</span> </a>
+        <a href="#" class="logo">SELL <span>CARS</span> </a>
         <!-- Nav List -->
         <ul class="navbar">
           <li><a href="#home" class="active">Home</a></li>
